--- a/BDAT1001.ContactManagement/Pages/Contacts/Delete.cshtml
+++ b/BDAT1001.ContactManagement/Pages/Contacts/Delete.cshtml
@@ -2,7 +2,7 @@
 @model BDAT1001.ContactManagement.Pages.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Contact";
 }
 
 <h1>Delete</h1>
