--- a/BDAT1001.ContactManagement/Pages/Contacts/Edit.cshtml
+++ b/BDAT1001.ContactManagement/Pages/Contacts/Edit.cshtml
@@ -2,7 +2,7 @@
 @model BDAT1001.ContactManagement.Pages.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Contact";
 }
 
 <h1>Edit</h1>
