--- a/BDAT1001.ContactManagement/Pages/Contacts/Create.cshtml
+++ b/BDAT1001.ContactManagement/Pages/Contacts/Create.cshtml
@@ -2,12 +2,12 @@
 @model BDAT1001.ContactManagement.Pages.Contacts.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Contact";
 }
 
-<h1>Create</h1>
+<h1>Create Contact</h1>
 
-<h4>Contact</h4>
+ 
 <hr />
 <div class="row">
     <div class="col-md-4">
