--- a/BDAT1001.ContactManagement/Pages/Contacts/Index.cshtml
+++ b/BDAT1001.ContactManagement/Pages/Contacts/Index.cshtml
@@ -5,9 +5,71 @@
     ViewData["Title"] = "Index";
 }
 
+<div class="container">
+    <h1>Index</h1>
+    <p>
+        <a asp-page="Create" class="btn btn-primary">Create New</a>
+    </p>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead class="table-header">
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].Name)</th>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].Address)</th>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].City)</th>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].State)</th>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].Zip)</th>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].Email)</th>
+                    <th>@Html.DisplayNameFor(model => model.Contact[0].Status)</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Contact)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                        <td>@Html.DisplayFor(modelItem => item.City)</td>
+                        <td>@Html.DisplayFor(modelItem => item.State)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Zip)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                        <td class="action-buttons">
+                            @if ((await AuthorizationService.AuthorizeAsync(User, item, ContactOperations.Update)).Succeeded)
+                            {
+                                <a asp-page="./Edit" asp-route-id="@item.ContactId" class="btn btn-sm btn-secondary">Edit</a>
+                            }
+                            <a asp-page="./Details" asp-route-id="@item.ContactId" class="btn btn-sm btn-info">Details</a>
+                            @if ((await AuthorizationService.AuthorizeAsync(User, item, ContactOperations.Delete)).Succeeded)
+                            {
+                                <a asp-page="./Delete" asp-route-id="@item.ContactId" class="btn btn-sm btn-danger">Delete</a>
+                            }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
+
+
+
+
+
+@*
+
+
+
 <h1>Index</h1>
 
-<p>
+
+
+
+
+
+ <p>
     <a asp-page="Create">Create New</a>
 </p>
 <table class="table">
@@ -84,4 +146,5 @@
             </tr>
         }
     </tbody>
-</table>
+</table> *@
+
